--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,14 +39,13 @@
 }
 
 .hero-img {
-  background-image: url("/images/background4.png");
+  background-image: url("/images/background2.png");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
 }
 
 .image-container {
-  height: 70vh;
   background-image: url("/images/background.png");
   background-position: center;
   background-size: cover;
@@ -55,6 +54,7 @@
 }
 
 .p-container {
+  height: 500px;
   position: relative;
   overflow: hidden;
   background: rgb(238, 237, 237);
@@ -74,7 +74,7 @@
 .product-info {
   position: absolute;
   inset: 0;
-  background: #333;
+  background: #1b1b1b;
   color: white;
   opacity: 0;
   transition: opacity 0.3s;
