--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,3 +106,12 @@
 .nav-close {
   right: -85%;
 }
+
+.sign-logo{
+  background-image: url('/images/logoblack.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+ 
+}
+
