--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,11 @@
   font-family: "Oswald", sans-serif;
   font-weight: 400;
 }
+
+.font-300 {
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+}
 .ubuntu {
   font-family: "Ubuntu", sans-serif;
   font-weight: 300;
