--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,6 @@ body {
   position: -webkit-sticky;
 }
 
-.g{
-  -webkit-text-stroke: 1px rgb(3, 165, 3);
+.f{
+  -webkit-text-stroke: 0.5px rgb(78, 170, 3);
 }
