--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import 'node_modules/locomotive-scroll/dist/locomotive-scroll';
 
 @tailwind base;
 @tailwind components;
@@ -141,5 +142,13 @@ body {
 }
 
 .f{
-  -webkit-text-stroke: 0.5px rgb(78, 170, 3);
+  -webkit-text-stroke: 0.5px rgb(49, 179, 77);
+}
+.lenis{
+  overflow: hidden;
+}
+
+.g{
+  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  color: transparent;
 }
